--- a/TestingProjectWithDb/MainWindow.xaml
+++ b/TestingProjectWithDb/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestingProjectWithDb"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="198.185" Width="289.337">
     <Grid>
-        
+        <Button Content="Insert new" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Height="23" Click="Button_Click"/>
+        <TextBox x:Name="textBox1" Height="23" Margin="10,10,91,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
+        <ListBox x:Name="listBox1" Margin="10,38,10,10"/>
+
     </Grid>
 </Window>
