--- a/TestingProjectWithDb/MainWindow.xaml
+++ b/TestingProjectWithDb/MainWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestingProjectWithDb"
         mc:Ignorable="d"
-        Title="MainWindow" Height="354.446" Width="289.337">
+        Title="MainWindow" Height="356.895" Width="330.965" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button Content="Insert new" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Height="23" Click="Button_Click"/>
-        <TextBox x:Name="textBox1" Height="23" Margin="10,10,91,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
+        <Button Content="Insert new" HorizontalAlignment="Left" Margin="238,10,0,0" VerticalAlignment="Top" Width="75" Height="23" Click="Button_Click"/>
+        <TextBox x:Name="textBox1" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="your own data" VerticalAlignment="Top" HorizontalAlignment="Left" Width="223"/>
         <ListBox x:Name="listBox1" Margin="10,38,10,10"/>
 
     </Grid>
